Rewrite convention plugins in Kotlin