@@ -1,4 +1,5 @@
 plugins {
+    id 'org.jetbrains.kotlin.jvm'
     id 'groovy'
 }
 
@@ -13,6 +14,20 @@ java {
 dependencies {
     implementation gradleApi()
     implementation localGroovy()
+
+    testImplementation localGroovy()
+    testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
+}
+
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+}
+
+tasks.named('compileGroovy') {
+    dependsOn tasks.named('compileKotlin')
+    classpath += files(tasks.named('compileKotlin').flatMap { it.destinationDirectory })
 }
 
 def buildToolsCatalog = extensions.getByType(VersionCatalogsExtension).named('buildTools')
